--- a/app.json
+++ b/app.json
@@ -12,6 +12,11 @@
       "supportsTablet": true
     },
     "android": {
+      "config": {
+        "googleMaps": {
+          "apiKey": "YOUR_GOOGLE_MAPS_API_KEY_HERE"
+        }
+      },
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -19,7 +24,8 @@
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.priyanshu1486.Angelix"
     },
     "web": {
       "output": "static",
@@ -31,22 +37,32 @@
         "expo-splash-screen",
         {
           "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
+          "imageWidth": 280,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#9333EA",
           "dark": {
-            "backgroundColor": "#000000"
+            "backgroundColor": "#9333EA"
           }
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow Angelix to use your location for safety tracking."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
     },
     "extra": {
-      "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_aGFybWxlc3MtaGFkZG9jay01Ni5jbGVyay5hY2NvdW50cy5kZXYk"
+      //"EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_ZmlybS1nb2JsaW4tOTguY2xlcmsuYWNjb3VudHMuZGV2JA",
+      "router": {},
+      "eas": {
+        "projectId": "8ddf1a28-8a39-4f5d-811f-da51d0342811"
+      }
     }
   }
 }
